--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "wasm-utils"
+name = "encoding-addresses"
 version = "0.1.0"
 edition = "2021"
 
@@ -15,3 +15,5 @@ wasm-bindgen = "0.2"
 js-sys = "0.3"
 rain-metadata = "0.0.2-alpha.6"
 serde_bytes = "0.11.12"
+serde-wasm-bindgen = "0.4"
+wasm-bindgen-futures = "0.4"
